# AdventOfCode2020Cpp

./: .gitignore  CMakeLists.txt  README.TXT  Task16.cpp  Task16.h  Task17.cpp  Task17.h  Task20.cpp  Task20.h  Task21.cpp  Task21.h  Task24.cpp  Task24.h  Task5.cpp  Task5.h  Task6.cpp  Task6.h  Task8.cpp  Task8.h  data13.txt  main.cpp  task1.cpp  task1.h  task10.cpp  task10.h  task11.cpp  task11.h  task12.cpp  task12.h  task13.cpp  task13.h  task14.cpp  task14.h  task15.cpp  task15.h  task16.cpp  task16.h  task17.cpp  task17.h  task18.cpp  (+26 more)
