cmake_minimum_required(VERSION 3.17)
project(AdventOfCode2020)

set(CMAKE_CXX_STANDARD 20)

add_executable(AdventOfCode2020 main.cpp task1.cpp task1.h task2.cpp task2.h task3.cpp task3.h task4.cpp task4.h Task5.cpp Task5.h Task6.cpp Task6.h task7.cpp task7.h Task8.cpp Task8.h task9.cpp task9.h task10.cpp task10.h task11.cpp task11.h task12.cpp task12.h task13.cpp task13.h task14.cpp task14.h task15.cpp task15.h)