cmake_minimum_required(VERSION 3.15)
project(AdventOfCode2020)

set(CMAKE_CXX_STANDARD 20)

add_executable(AdventOfCode2020 main.cpp task1.cpp task1.h task2.cpp task2.h task3.cpp task3.h task4.cpp task4.h Task5.cpp Task5.h Task6.cpp Task6.h task7.cpp task7.h Task8.cpp Task8.h task9.cpp task9.h task10.cpp task10.h task11.cpp task11.h task12.cpp task12.h task13.cpp task13.h task14.cpp task14.h task15.cpp task15.h task16.cpp task16.h task17.cpp task17.h task18.cpp task18.h task19.cpp task19.h task20.cpp task20.h utils.h task21.cpp task21.h task22.cpp task22.h task23.cpp task23.h task24.cpp task24.h)