cmake_minimum_required(VERSION 3.15)
project(AdventOfCode2020)

set(CMAKE_CXX_STANDARD 23)

add_executable(AdventOfCode2020 main.cpp task1.cpp task1.h task2.cpp task2.h task3.cpp task3.h task4.cpp task4.h Task5.cpp Task5.h Task6.cpp Task6.h task7.cpp task7.h Task8.cpp Task8.h task9.cpp task9.h task10.cpp task10.h task11.cpp task11.h task12.cpp task12.h task13.cpp task13.h task14.cpp task14.h task15.cpp task15.h Task16.cpp Task16.h Task17.cpp Task17.h task18.cpp task18.h task19.cpp task19.h Task20.cpp Task20.h utils.h Task21.cpp Task21.h task22.cpp task22.h task23.cpp task23.h Task24.cpp Task24.h task25.cpp task25.h)